# somos-api

./: LICENSE  README.md  pyproject.toml
src/: manage.py
src/somos/: asgi.py  settings.py  urls.py  wsgi.py
